# Factory_Opration_Managemnet

./: README.md  pyproject.toml
src/FactoryOps/: __init__.py  module1.py
src/FactoryOps.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/FactoryOps/Manufacturing_Science/: PApi00002.py  testing.py
src/FactoryOps/Manufacturing_Science/littleslaw/: Py00001.py
